--- a/src/app/configuracion-nicho/config-general/config-general.component.html
+++ b/src/app/configuracion-nicho/config-general/config-general.component.html
@@ -71,7 +71,7 @@
         </tbody>
     </table>
     <div fxLayout="row" fxLayoutAlign="start center"> 
-        <button mat-raised-button (click)="subirArchivos()" class="my-20" [disabled]="!nicho.general.background.dev">
+        <button mat-raised-button (click)="subirArchivos()" class="my-20" [disabled]="!nicho.general.background.local">
             Subir archivos proyecto
         </button>
         <button mat-raised-button class="ml-12">
