Ajustes del miercoles

--- a/src/app/configuracion-nicho/config-bd/config-bd.component.html
+++ b/src/app/configuracion-nicho/config-bd/config-bd.component.html
@@ -3,11 +3,11 @@
     <strong (click)="salir.emit()">Regresar</strong>
     <mat-form-field>
         <mat-label>Host</mat-label>
-        <input matInput [(ngModel)]="nicho.database.host" placeholder="Host">
+        <input matInput [(ngModel)]="nicho.database.server" placeholder="Host">
     </mat-form-field>
     <mat-form-field>
         <mat-label>Usuario</mat-label>
-        <input matInput [(ngModel)]="nicho.database.usuario" placeholder="Usuario">
+        <input matInput [(ngModel)]="nicho.database.username" placeholder="Usuario">
     </mat-form-field>
     <mat-form-field>
         <mat-label>Password</mat-label>
